--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="kaeG9fU2DlsRj3Vi5K33GweWWnluutqmyeblEERvUeI" />
+  <meta name="msvalidate.01" content="DA0B624CF05396DDF91F3813BC47074D" />
   <!-- Start of  Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
 <!-- End of  Zendesk Widget script -->
@@ -170,7 +172,7 @@
 <header>
   <div class="logo" aria-label="McAfee Antivirus Download Help">McAfee Help</div>
   <nav role="navigation" aria-label="Primary navigation">
-    <a href="i-downloadsoftwares.com"> <button class="btn" aria-label="Download McAfee Antivirus">Download</button> </a>
+    <a href="https://i-downloadsoftwares.com"> <button class="btn" aria-label="Download McAfee Antivirus">Download</button> </a>
     <a href="https://accuratelivechat.com"> <button class="btn" aria-label="Contact McAfee Support">Support</button> </a>
   </nav>
 </header>
